# zmtp-rs

./: Cargo.toml  README.md  flake.nix  ipc-chan.toml
.github/workflows/: continuous-integration.yml
src/: errors.rs  lib.rs  sockets.rs
src/packets/: mod.rs  null.rs  zmtp.rs
tests/: socket.rs
