[package]
name = "zmtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["net", "macros", "rt-multi-thread"] }
twelf = { version = "0.10.0", features = ["toml"] }
