[package]
name = "zmtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
bytes = "1.4.0"
clap = "4.1.8"
futures = "0.3.27"
nom = "7.1.3"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["io-util", "net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["io"] }
twelf = { version = "0.10.0", features = ["toml"] }

[dev-dependencies]
ipc-chan = "0.8.0"

